--- a/backend/app/views/layouts/application.html.erb
+++ b/backend/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Backend</title>
+    <title>Stock API</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
